# Problem-optjecanja

./: README.md
Euler/: CMakeLists.txt  config.h.cmake  dune.module  projektni.pc.in
Euler/cmake/modules/: CMakeLists.txt
Euler/doc/doxygen/: Doxylocal
Euler/dune/: CMakeLists.txt
Euler/dune/projektni/: CMakeLists.txt  projektni.hh
Euler/src/: 1.msh  3.msh  4.msh  6.msh  7.msh  9.msh  CMakeLists.txt  bctype.hh  coefficients.hh  driver.hh  operator.hh  projektni.cc
Navier-Stokes/: CMakeLists.txt  NavierStokes.pc.in  config.h.cmake  dune.module
Navier-Stokes/cmake/modules/: CMakeLists.txt
Navier-Stokes/doc/doxygen/: Doxylocal
Navier-Stokes/dune/: CMakeLists.txt
Navier-Stokes/dune/NavierStokes/: CMakeLists.txt  NavierStokes.hh
Navier-Stokes/src/: 1.geo  2.msh  5.msh  8.msh  CMakeLists.txt  bc_extension.hh  driver.hh  stokes.cc  stokes.input
